# PySlide

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  setup.py
codecast/codecast/: __init__.py
codecast/codecast/core/: engine.py  models.py
codecast/codecast/languages/: base.py  python.py
codecast/codecast/presentation/: server.py
codecast/codecast/visualization/: components.py  renderers.py
docs/: index.md
docs/api/: index.md
docs/examples/: index.md
docs/guides/: index.md
examples/: fibonacci.py
examples/welcome/: introduction.py
pyslide/: __init__.py
pyslide.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
pyslide/core/: __init__.py  execution.py  models.py
pyslide/utils/: __init__.py  server.py
pyslide/visualization/: __init__.py  renderer.py
