[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "codecast"
version = "0.1.0"
description = "Interactive Code Execution Visualization Library"
readme = "README.md"
requires-python = ">=3.7"
license = "MIT"
keywords = ["visualization", "code execution", "debugging", "education"]
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=22.0",
    "isort>=5.0",
    "mypy>=0.9",
    "flake8>=4.0",
]

[tool.black]
line-length = 88
target-version = ["py37"]

[tool.isort]
profile = "black"
multi_line_output = 3 